# scrum-4.github.io_old

./: README.md  init.py  pyproject.toml
cmsimde/: cmsimde.leo  flaskapp.py
cmsimde/static/: axuploader.js
config/: content.htm  content_backup.htm  sitetitle
content/: About.html  STL.html  Wink.html  index.html  sitemap.html  tipuesearch_content.js
downloads/: part1.stl
